...
      }
      
      // Heart button for favorites
      Text("Tab the picture for more info.")
      
      Button(action: toggleFavorite) {
        Image(systemName: isFavorite ? "heart.fill" : "heart")
          .resizable()
          .frame(width: 30, height: 30)
          .foregroundColor(isFavorite ? .red : .gray)
      }
      .scaleEffect(heartScale)
      .padding()
...
      Text("Photographer: \(photo.photographer)")
        .bold()
      if let photographerId = photo.photographerId {
        Text("Photographer ID: \(photographerId)")
      }
      if let photographerURL = photo.photographerURL {
        Link("Photographer URL", destination: photographerURL)
      }
      Text("Photo URL: \(photo.url.absoluteString)")
        .border(Color.gray, width: 1)
    }
    .padding()
  }
...
