...
    }
  }
  
  // Display photos in a list layout
  private func displayList() -> some View {
    List(photoFavModel.favorites, id: \.id) { photo in
      photoCell(photo: photo)
    }
  }
  
  // Display photos in a slideshow layout
  private func displaySlideShow(geometry: GeometryProxy) -> some View {
    TabView {
...
